components/header/Header.module.scss
.headerWrapper {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: transparent;
  height: 80px;
  z-index: 999;
  backdrop-filter: var(--nav-blur);
  transition: all 0.3s ease;
}

.headerWrapperStickyFirst {
  @extend .headerWrapper;
  background: var(--nav-opacity-1);
}

.headerWrapperStickySecond {
  @extend .headerWrapper;
  background: var(--nav-opacity-2);
}
.headerWrapperStickyThird {
  @extend .headerWrapper;
  background: var(--nav-opacity-3);
}
.headerWrapperStickyFourth {
  @extend .headerWrapper;
  background: var(--nav-opacity-4);
}
.headerWrapperStickyFifth {
  @extend .headerWrapper;
  background: var(--nav-full);
}

.headerInnerWrapper {
  margin: 0 auto;
  width: 100%;
  height: 100%;
  max-width: 1310px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  @media (max-width: 1310px) {
    padding: 0 20px;
    width: auto;
  }
}

.headerList {
  display: flex;
  li {
    display: flex;
    align-items: center;
    list-style-type: none;
    font-size: 16px;
    cursor: pointer;
    &:hover {
      text-decoration: underline;
    }
  }
  li + li {
    margin-left: 50px;
  }
  .navDarkToggle {
    font-size: 32px;
    margin-left: 25px;
    &:hover {
      text-decoration: none;
    }
  }
  @media (max-width: 900px) {
    display: none;
  }
}

.headerListSticky {
  @extend .headerList;
  li {
    color: var(--nav-sticky-color);
  }
}

.headerHamburger {
  color: white;
  @media (min-width: 900px) {
    display: none;
  }
}

.headerHamburgerDark {
  @extend .headerHamburger;
}

.menu {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(255, 255, 255, 0.05);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
  transition: all 0.3s ease;
  opacity: 0;
  visibility: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
  ul {
    padding: 0;
    li {
      visibility: hidden;
      list-style-type: none;
      font-size: 36px;
      font-weight: 700;
      text-align: center;
      margin-bottom: 20px;
      transform: translateY(10%);
      opacity: 0;
    }
    // .darkListItem {
    //   // color: $color-primary;
    // }
  }
}

@keyframes listItem {
  0% {
    transform: translateY(30px);
    visibility: visible;
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    visibility: visible;
    opacity: 1;
  }
}

.menuOpen {
  @extend .menu;
  opacity: 1;
  visibility: visible;
  ul {
    li:first-of-type {
      animation-name: listItem;
      animation-duration: 0.4s;
      animation-delay: 0.3s;
      animation-fill-mode: forwards;
    }
    li:nth-of-type(2) {
      animation-name: listItem;
      animation-duration: 0.4s;
      animation-delay: 0.5s;
      animation-fill-mode: forwards;
    }
    li:nth-of-type(3) {
      animation-name: listItem;
      animation-duration: 0.4s;
      animation-delay: 0.7s;
      animation-fill-mode: forwards;
    }
    li:nth-of-type(4) {
      animation-name: listItem;
      animation-duration: 0.4s;
      animation-delay: 1s;
      animation-fill-mode: forwards;
    }
  }
}

.closeIcon {
  position: fixed;
  top: 15px;
  left: 15px;
  color: rgb(31, 62, 118);
}

.closeIconDark {
  @extend .closeIcon;
}

